# babel

./: .gitignore  README.md  Z3950_communicator.py  babel.py  babelstore.py  celldata_parser.py  convert_price.py  fund_applicator.py  ids_parser.py  localDB.py  marc_generator.py  patches.py  prepopulated_tables.py  pyproject.toml  reports.py  requirements-mac.txt  requirements.txt  sheet_processing.py  updater.py  validator.py  wlo_generator.py
babel/: app.py  babel.py  credentials.py  creds.json.example  errors.py  freeze-babel-debug.sh  freeze-babel.sh  installer.py  logging_settings.py  paths.py  version.txt
babel-pyinstaller/: freeze-babel-debug.cmd  freeze-babel.cmd  hook-keyring.backends.py  hook-openpyxl.py  win_info.txt
babel-updater/: freeze-updater-debug.cmd  freeze-updater.cmd  updater.py  version.txt
babel-windows-installer/: babelsetup.py  freeze-installer.cmd  zip_app.py
babel/data/: blanket_po_generator.py  data_objs.py  datastore.py  datastore_values.py  datastore_worker.py  fund_transations.py  grid_transations.py  ingest_transactions.py  transactions_cart.py  transactions_carts.py  transactions_fund.py  transactions_ingest.py  transactions_reports.py  transactions_search.py  transations_grid.py  (+2 more)
helpPngs/: Babel2Wiki.txt
tests/: alter_db.py  conftest.py  context.py  plat_is_research_sample.json  plat_items_sample.json  plat_sample.json  report-data.csv  test_blanket_po.py  test_credentials.py  test_data.py  test_data_validators.py  test_installer.py  test_is_configured.py  test_paths.py  test_temp_data.py  test_wlo_generator.py  test_xlsx.py
(+50 files in other folders)
