[tool.poetry]
name = "babel"
version = "4.0.0"
description = "A Windows application for library material selectors that manipulates vendor's spreadsheets to produced MARC21 order records to be loaded to BPL & NYPL Sierra."
authors = ["Tomasz Kalata <tomaszkalata@bookops.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pymarc = "^4.2.0"
openpyxl = "^3.0.9"
SQLAlchemy = "^1.4.35"
PyMySQL = "^1.0.2"
Pillow = "^9.1.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
loggly-python-handler = "^1.0.1"
bookops-nypl-platform = {git = "https://github.com/BookOps-CAT/bookops-nypl-platform", rev = "v0.3.0"}
keyring = "^23.5.0"
cryptography = "^36.0.2"
bookops-bpl-solr = {git = "https://github.com/BookOps-CAT/bookops-bpl-solr", rev = "v0.3.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
